--- a/.github/workflows/master_exploringeconomicdata.yml
+++ b/.github/workflows/master_exploringeconomicdata.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - exploringeconomicdata
+name: Build and deploy Node.js app to Azure Web App - ExploringEconomicData
 
 on:
   push:
@@ -50,7 +50,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'exploringeconomicdata'
+          app-name: 'ExploringEconomicData'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_917282915CAB49EABAFCBD04FCB22D92 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E0A41B725DB14B4C84C98ACE5A2A65C2 }}
           package: .
